static_sites/profile.martinlutheryung.com/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: profilemly-gateway
spec:
  selector:
    istio: ingressgateway-profile
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "profile.martinlutheryung.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profilemly
spec:
  hosts:
  - "profile.martinlutheryung.com"
  gateways:
  - profilemly-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: profilemly
